<resources>
    <string name="app_name">Apex VPN</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="login_success">Login Successfully</string>
    <string name="login_failed_session_not_found">Login failed: No session found</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="loading">Loading…</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_w_google">Sign up with google</string>
    <string name="state">NONE</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Connect</string>
    <string name="default_web_client_id">328887374113–5er56jbe5tus397pqg08pi15i9m14o0t.apps.googleusercontent.com</string>
    <string name="payment_instruct_detail">
        Scan the QR code above.
        \nAfter payment successful, please login again to activate the premium account.
        \nThank you for your support.
    </string>
    <string name="usernameValidateError">Username must be at least 6 characters, must not contain capital letters, must not begin with a number, and must not contain special characters.</string>
    <string name="verify">Verify</string>
    <string name="change_password">Change Password</string>
    <string name="emailValidateError">Email is not valid</string>
    <string name="passwordValidateError">Password must have 6 characters or more</string>
    <string name="payment_save_qr">Save QR as picture</string>
    <string name="click_here_logout">Click here to logout</string>
    <string name="verify_email">Verify email</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="passwordConfirmValidateError">Password does not match</string>
    <string name="reset_password">Reset Password</string>
    <string name="email_not_confirmed">Email Not Confirmed</string>
    <string name="connect_to">Connect to: </string>
    <string name="your_wifi">Your Wifi</string>
    <string name="not_connected">Not Connected</string>
    <string name="none">None</string>
    <string name="contact_us_detail">We are a group of passionate Information Technology students who collaborate to develop advanced and useful applications. With expertise in DevOps, programming, and mobile app development, we strive to stay updated with the latest technologies and deliver high-quality products that meet user needs. Join us on our exciting technological journey!</string>
    <string name="contact_us_follow">Follow Us On</string>
    <string name="contact_us">Contact Us</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_detail">Enter your email and we will send OTP code to recovery the password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="premium">Premium</string>
    <string name="non_premium">Free</string>
    <string name="unlimited">Unlimited</string>
    <string name="get_premium">Get Premium</string>
    <string name="get_premium_select_sub">Select Your Subscription</string>
    <string name="get_premium_btn">Get Premium and Enjoying</string>
    <string name="payment_success">Payment successfully, login again to achieve premium</string>
    <string name="login_no_acc">Don’t have an account?</string>
    <string name="payment_title">Scan To Pay</string>
    <string name="payment_instruction">Instruction</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="private_policy_detail_1">Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie, musica, sport etc, litot Europa usa li sam vocabular. Li lingues differe solmen in li grammatica, li pronunciation e li plu commun vocabules. Omnicos directe al desirabilite de un nov lingua franca: On refusa continuar payar custosi traductores. At solmen va esser necessi far uniform grammatica, pronunciation e plu sommun paroles. Ma quande lingues coalesce, li grammatica del resultant lingue es plu simplic e regulari quam ti del coalescent lingues.</string>
    <string name="private_policy_detail_2">It va esser tam simplic quam Occidental in fact, it va esser Occidental. A un Angleso it va semblar un simplificat Angles, quam un skeptic Cambridge amico dit me que Occidental es.Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie, musica, sport etc, litot Europa usa li sam vocabular. Li lingues differe solmen in li grammatica, li pronunciation e li plu commun vocabules. Omnicos directe al desirabilite de un nov lingua franca: On refusa continuar payar custosi traductores.</string>
    <string name="reset_password_title">Create your new password for ApexVPN so you can login to your account.</string>
    <string name="successfully">Successfully</string>
    <string name="reset_password_success">Your password has been reset successfully</string>
    <string name="okay">Okey</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up_have_acc">Already have an account?</string>
    <string name="email_verify_success">Your account has been successfully registered</string>
    <string name="verification">Verification</string>
    <string name="verification_title">Code has sent to</string>
    <string name="sample_email">hello123@gmail.com</string>
    <string name="confirm_email_send">A confirmation email has been sent to you. Please verify it.</string>
    <string name="resend">Resend</string>
    <string name="change_password_title">Regularly changing passwords boosts security</string>
    <string name="new_password_confirm">New Password Confirm</string>
    <string name="enter_new_password_confirm">Enter new password again</string>
    <string name="new_password">New Password</string>
    <string name="wanna_logout">Do you want to logout?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="example_text">Example Text</string>
    <string name="done">Done</string>
    <string name="my_account">My Account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="type">Type</string>
    <string name="expire_date">Expire Date</string>
    <string name="disconnect_alert">Do you want to disconnect?</string>
    <string name="your_ip">Your IP:</string>
    <string name="need_help">Need help? Contact us at</string>
    <string name="home">Home</string>
    <string name="country">Country</string>
    <string name="account">Account</string>
    <string name="username_already_taken">Username is already taken</string>
    <string name="email_already_taken">Email is already taken</string>
    <string name="email_login_failed">Incorrect login information</string>
    <string name="password_change_success">Change password successful</string>
    <string name="user_doesn_t_exist">User doesn\'t exist</string>
    <string name="create_payment_loading">Please wait a moment while we create\nthe payment QR code for you</string>
    <string name="verrify_error_1">Verification code has expired</string>
    <string name="verify_error_2">Invalid verification code</string>
    <string name="source_code">Source Code</string>
    <string name="rate_us">Rate us</string>
    <string name="not_cn">Not connected</string>
    <string name="disco">Disconnect</string>
    <string name="authe">Authenticating...</string>
    <string name="exvpn">Exiting</string>
    <string name="res_vpn">Resume</string>
    <string name="pause_vpn">Pause</string>
    <string name="cn_suc">Connect Successfully</string>
    <string name="au_failed">Authentication failed</string>
    <string name="wam">Wait a moment</string>
    <string name="cn">Connect</string>
    <string name="on_cn">Connecting...</string>
    <string name="retry">Retry</string>
    <string name="or_you_can_click_here">Or you can click here</string>
    <string name="vpn_server">VPN Servers</string>
    <string name="google_web_client_id">16756964301-8hjukq7lns71u67rf18o3uen654cd0vg.apps.googleusercontent.com</string>
    <string name="unknow_error">Unknow Error</string>
</resources>