<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    style="@style/CustomCardViewStyle"
    app:cardBackgroundColor="@color/white"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/indicator"
        android:padding="15sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30sp"
        >

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/poppin_medium"
            android:textSize="20sp"
            android:text="@string/change_password" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppin_medium"
            android:gravity="center"
            android:paddingTop="10sp"
            android:text="@string/change_password_title" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/poppin_medium"
            android:text="@string/new_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/iplyNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#757575"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:fontFamily="@font/poppin_medium"
                android:textSize="12sp"
                android:id="@+id/txtNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_input_change_password"
                android:hint="@string/enter_new_password"
                android:inputType="textPassword"
                android:textColor="@color/primaryColorVPN" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/poppin_medium"
            android:text="@string/new_password_confirm" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/iplyNewPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#757575"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:fontFamily="@font/poppin_medium"
                android:textSize="12sp"
                android:id="@+id/txtNewPasswordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_input_change_password"
                android:hint="@string/enter_new_password_confirm"
                android:textColor="@color/primaryColorVPN"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnChangePw"
            android:layout_width="match_parent"
            android:layout_height="55sp"
            android:layout_marginTop="60sp"
            android:backgroundTint="@color/primaryColorVPN"
            android:fontFamily="@font/poppin_medium"
            android:text="@string/change_password" />


    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
